Use sync from new backend